# JobOptimizer

./: .gitignore  README.md  SUPABASE_SETUP.md  app.py  database.py  init_db.py  main.py  pyproject.toml  requirements.txt  setup.py  test_app.py  users.db  vercel.json
templates/: index.html  login.html  signup.html
