[project]
name = "resume-reviewer"
version = "0.1.0"
description = "AI-powered resume optimizer with writing style learning and LaTeX output"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.78.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.0",
    "pathlib",
]
